# radis

./: Cargo.toml  README.md  run.sh
.github/workflows/: rust.yml
crates/persister/: Cargo.toml
crates/persister/src/: file.rs  lib.rs
crates/persister/tests/: file_test.rs  persister.rs
crates/raft/: Cargo.toml  build.rs
crates/raft/src/: context.rs  lib.rs  log.rs  service.rs  state.rs
crates/raft/src/state/: candidate.rs  follower.rs  leader.rs
crates/raft/tests/: raft_test.rs
crates/timer/: Cargo.toml
crates/timer/src/: lib.rs
crates/timer/tests/: timer_test.rs
proto/raft/: raft.proto
src/: conf.rs  db.rs  lib.rs  timer.rs
src/raft/: config.rs  context.rs  log.rs  service.rs  state.rs
src/raft/state/: candidate.rs  follower.rs  leader.rs
tests/: raft_test.rs  timer_test.rs
