[package]
    name = "radis"
    version = "0.1.0"
    edition = "2021"
    default-run = "radis"

[[bin]]
    name = "radis"
    path = "src/bin/radis/main.rs"

[[bin]]
    name = "mkconf"
    path = "src/bin/mkconf/main.rs"


[dependencies]
    anyhow = "1.0.86"
    clap = {version = "4.5.8", features = [
        "derive",
    ]}
    prost = "0.12.6"
    serde = {version = "1.0.203", features = [
        "derive",
    ]}
    tokio = {version = "1.38.0", features = [
        "rt-multi-thread",
        "macros",
    ]}
    toml = "0.8.14"
    tonic = "0.11.0"

[build-dependencies]
    tonic-build = "0.11.0"
