[package]
    name = "radis"
    version = "0.1.0"
    edition = "2021"
    default-run = "radis"

[[bin]]
    name = "radis"
    path = "src/bin/radis/main.rs"

[[bin]]
    name = "mkconf"
    path = "src/bin/mkconf/main.rs"


[dependencies]
    anyhow = "1.0.86"
    async-timers = "0.1.4"
    clap = {version = "4.5.8", features = [
        "derive",
    ]}
    futures = "0.3.30"
    log = { version = "0.4.22", features = ["kv"] }
    prost = "0.12.6"
    rand = "0.8.5"
    serde = {version = "1.0.203", features = [
        "derive",
    ]}
    structured-logger = "1.0.3"
    tokio = {version = "1.38.0", features = [
        "rt-multi-thread",
        "macros",
    ]}
    toml = "0.8.14"
    tonic = "0.11.0"

[build-dependencies]
    tonic-build = "0.11.0"
