[package]
    name = "radis"
    version = "0.1.0"
    edition = "2021"
    default-run = "radis"

[[bin]]
    name = "radis"
    path = "src/bin/radis/main.rs"

[[bin]]
    name = "mkconf"
    path = "src/bin/mkconf/main.rs"

[workspace]
    members = [
        "crates/raft",
        "crates/timer",
    ]
    [workspace.dependencies]
        timer = {path = "crates/timer"}
        raft = {path = "crates/raft"}

[dependencies]
    timer.workspace = true
    raft.workspace = true
    anyhow = "1.0.86"
    bytes = {version = "1.6.1", features = [
        "serde",
    ]}
    clap = {version = "4.5.8", features = [
        "derive",
    ]}
    log = {version = "0.4.22", features = [
        "kv",
    ]}
    mini-redis = "0.4.1"
    serde = {version = "1.0.203", features = [
        "derive",
    ]}
    serde_json = "1.0.120"
    structured-logger = "1.0.3"
    tokio = {version = "1.38.0", features = [
        "rt-multi-thread",
        "macros",
    ]}
    toml = "0.8.14"
